namespaces/dev/gard/namespace.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START anthosconfig_namespace_inheritance_config_namespaces_eng_gamestore_namespace] 
apiVersion: v1
kind: Namespace
metadata:
  name: gard
  labels:
    app: gard
    shared-gateway-access: "true"
  annotations:
    internal: "true"
# [END anthosconfig_namespace_inheritance_config_namespaces_eng_gamestore_namespace]
