namespaces/dev/gard/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    ports:
      - containerPort: 8080
    resources:
      requests:
        memory: "77Mi"
        cpu: "75m"
      limits:
        memory: "108Mi"
        cpu: "100m"
