namespaces/dev/gard/allowingressnp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-default-namespace
  namespace: gard # The policy is applied to the destination namespace
spec:
  podSelector: {} # An empty selector selects ALL pods in the "gard" namespace
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
